ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /product
        pathType: Prefix
        backend:
          service:
            name: nginx-production-service
            port:
              number: 80
      - path: /front
        pathType: Prefix
        backend:
          service:
            name: nginx-development-service
            port:
              number: 80
      - path: /order
        pathType: Prefix
        backend:
          service:
            name: nginx-testing-service
            port:
              number: 80
